# vlm_canvas_bugs-code

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  setup_external_repos.py
1a-Collecting_Canvas_Applications/: Collecting_Data.ipynb  README.md
1b-Creating_E2E_Test_Scripts/: README.md  tsconfig.json  typings.d.ts
1b-Creating_E2E_Test_Scripts/e2e_test_scripts/: README.md  codegen.test.ts
1b-Creating_E2E_Test_Scripts/e2e_test_scripts/Aidymouse-Hexfriend/: README.md  sample.test.ts
1b-Creating_E2E_Test_Scripts/e2e_test_scripts/MichaelMakesGames-reflector/: README.md  sample.test.ts
1b-Creating_E2E_Test_Scripts/e2e_test_scripts/PrefectHQ-graphs/: README.md  sample.test.ts
1b-Creating_E2E_Test_Scripts/e2e_test_scripts/VoiceSpaceUnder5-VoiceSpace/: README.md  sample.test.ts
1b-Creating_E2E_Test_Scripts/e2e_test_scripts/Zikoat-infinite-minesweeper/: README.md  sample.test.ts
1c-Injecting_Visual_Bugs/: README.md
1c-Injecting_Visual_Bugs/investigation/: README.md  Understanding_Pixi.ipynb
1c-Injecting_Visual_Bugs/shaders/: README.md  bugAppearance.js  bugLayout.js  bugRendering.js  bugState.js  default.js
1d-Collecting_Screenshots/: README.md  tsconfig.json
1d-Collecting_Screenshots/src/: PixiParser.ts  PixiSamplerPlaywright.ts  PixiVisualBugsPlaywright.ts  parse.ts
2-Experiments/: README.md  run_vlm_analysis.sh
2-Experiments/vlm_analysis/: __init__.py  __main__.py  run.py  script_compile_results.py  utilities.py
2-Experiments/vlm_analysis/prompts/: v0_baseline.md  (+5 more)
3-Results/: Ablation.ipynb  Results.ipynb
(+51 files in other folders)
